# audio_pipeline

./: CMakeLists.txt  Dependencies.cmake  README.md
include/audio_pipeline/: dsp_library.hpp
src/: CMakeLists.txt
src/cli/: CMakeLists.txt  main.cpp  sine.cpp  sine.hpp
src/dsp_library/: CMakeLists.txt  dsp_library.cpp
